# resume_init

./: README.md  pyproject.toml
src/resume_init/: main.py
src/resume_init/crews/job_search_crew/: __init__.py  job_search_crew.py
src/resume_init/crews/job_search_crew/config/: agents.yaml  tasks.yaml
