[project]
name = "resume_init"
version = "0.1.0"
description = "resume-init using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
kickoff = "resume_init.main:kickoff"
run_crew = "resume_init.main:kickoff"
plot = "resume_init.main:plot"
run_with_trigger = "resume_init.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
